// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Migrate existing angular-components to barista components should add barista icons to the angular.json 1`] = `
Object {
  "cli": Object {
    "defaultCollection": "@nx/angular",
  },
  "defaultProject": "myapp",
  "projects": Object {
    "myapp": Object {
      "architect": Object {
        "build": Object {
          "builder": "@angular-devkit/build-angular:browser",
          "options": Object {
            "aot": true,
            "assets": Array [
              "apps/myapp/src/favicon.ico",
              "apps/myapp/src/assets",
              Object {
                "glob": "**/*",
                "input": "node_modules/@dynatrace/barista-fonts/fonts/",
                "output": "/fonts",
              },
              Object {
                "glob": "metadata.json",
                "input": "node_modules/@dynatrace/barista-icons",
                "output": "/assets/icons",
              },
              Object {
                "glob": "*.svg",
                "input": "node_modules/@dynatrace/barista-icons",
                "output": "/assets/icons",
              },
            ],
            "index": "apps/myapp/src/index.html",
            "main": "apps/myapp/src/main.ts",
            "outputPath": "dist/apps/myapp",
            "polyfills": "apps/myapp/src/polyfills.ts",
            "scripts": Array [],
            "styles": Array [
              "node_modules/@dynatrace/barista-fonts/typography.scss",
              "node_modules/@dynatrace/barista-components/style/index.scss",
              "apps/myapp/src/styles.scss",
            ],
            "tsConfig": "apps/myapp/tsconfig.app.json",
          },
        },
      },
      "projectType": "application",
      "root": "apps/myapp",
      "sourceRoot": "apps/myapp/src",
    },
    "myapp-e2e": Object {
      "architect": Object {
        "e2e": Object {
          "builder": "@nrwl/cypress:cypress",
          "configurations": Object {
            "production": Object {
              "devServerTarget": "myapp:serve:production",
            },
          },
          "options": Object {
            "cypressConfig": "apps/myapp-e2e/cypress.json",
            "devServerTarget": "myapp:serve",
            "tsConfig": "apps/myapp-e2e/tsconfig.e2e.json",
          },
        },
        "lint": Object {
          "builder": "@angular-devkit/build-angular:tslint",
          "options": Object {
            "exclude": Array [
              "**/node_modules/**",
              "!apps/myapp-e2e/**",
            ],
            "tsConfig": Array [
              "apps/myapp-e2e/tsconfig.e2e.json",
            ],
          },
        },
      },
      "projectType": "application",
      "root": "apps/myapp-e2e",
      "sourceRoot": "apps/myapp-e2e/src",
    },
    "some-lib": Object {
      "architect": Object {
        "lint": Object {
          "builder": "@angular-devkit/build-angular:tslint",
          "options": Object {
            "exclude": Array [
              "**/node_modules/**",
              "!libs/some-lib/**",
            ],
            "tsConfig": Array [
              "libs/some-lib/tsconfig.lib.json",
              "libs/some-lib/tsconfig.spec.json",
            ],
          },
        },
        "test": Object {
          "builder": "@nx/jest:jest",
          "options": Object {
            "jestConfig": "libs/some-lib/jest.config.js",
            "setupFile": "libs/some-lib/src/test-setup.ts",
            "tsConfig": "libs/some-lib/tsconfig.spec.json",
          },
        },
      },
      "prefix": "mc",
      "projectType": "library",
      "root": "libs/some-lib",
      "schematics": Object {},
      "sourceRoot": "libs/some-lib/src",
    },
  },
  "version": 1,
}
`;

exports[`Migrate existing angular-components to barista components should add styles correctly even if there is no styles array in the angular.json  1`] = `
Object {
  "projects": Object {
    "myapp": Object {
      "architect": Object {
        "build": Object {
          "builder": "@angular-devkit/build-angular:browser",
          "options": Object {
            "assets": Array [
              Object {
                "glob": "**/*",
                "input": "node_modules/@dynatrace/barista-fonts/fonts/",
                "output": "/fonts",
              },
            ],
            "index": "apps/myapp/src/index.html",
            "main": "apps/myapp/src/main.ts",
            "outputPath": "dist/apps/myapp",
            "polyfills": "apps/myapp/src/polyfills.ts",
            "styles": Array [
              "node_modules/@dynatrace/barista-fonts/typography.scss",
              "node_modules/@dynatrace/barista-components/style/index.scss",
            ],
            "tsConfig": "apps/myapp/tsconfig.app.json",
          },
        },
      },
      "projectType": "application",
      "root": "apps/myapp",
      "sourceRoot": "apps/myapp/src",
    },
  },
  "version": 1,
}
`;

exports[`Migrate existing angular-components to barista components should update imports of @dynatrace/angular-components to barista-components in package.json 1`] = `
Object {
  "dependencies": Object {
    "@angular/animations": "^8.2.12",
    "@angular/cdk": "^8.2.12",
    "@angular/common": "^8.2.12",
    "@angular/core": "^8.2.12",
    "@dynatrace/barista-components": "^5.0.0",
    "@dynatrace/barista-fonts": ">= 1.0.0 < 2",
    "@dynatrace/barista-icons": ">= 3.0.0 < 4",
    "@types/highcharts": "^5.0.23",
    "d3-scale": "^3.0.0",
    "d3-shape": "^1.3.5",
    "highcharts": "^6.0.7",
  },
}
`;

exports[`Migrate existing angular-components to barista components should update the legacy angular json 1`] = `
Object {
  "projects": Object {
    "myapp": Object {
      "architect": Object {
        "build": Object {
          "builder": "@angular-devkit/build-angular:browser",
          "options": Object {
            "aot": true,
            "assets": Array [
              "apps/myapp/src/favicon.ico",
              "apps/myapp/src/assets",
              Object {
                "glob": "**/*",
                "input": "node_modules/@dynatrace/barista-fonts/fonts/",
                "output": "/fonts",
              },
              Object {
                "glob": "**",
                "input": "node_modules/@dynatrace/barista-components/assets",
                "output": "/cache",
              },
              Object {
                "glob": "*.svg",
                "input": "node_modules/@dynatrace/barista-icons",
                "output": "/cache/icons",
              },
            ],
            "index": "apps/myapp/src/index.html",
            "main": "apps/myapp/src/main.ts",
            "outputPath": "dist/apps/myapp",
            "polyfills": "apps/myapp/src/polyfills.ts",
            "scripts": Array [],
            "styles": Array [
              "node_modules/@dynatrace/barista-fonts/typography.scss",
              "apps/myapp/src/styles.scss",
            ],
            "tsConfig": "apps/myapp/tsconfig.app.json",
          },
        },
      },
      "projectType": "application",
      "root": "apps/myapp",
      "sourceRoot": "apps/myapp/src",
    },
  },
  "version": 1,
}
`;

exports[`Migrate existing angular-components to barista components should update the main ngModule with the correct providers 1`] = `
"import { NgModule } from '@angular/core';
import { BrowserModule } from '@angular/platform-browser';

import { AppComponent } from './app.component';

@NgModule({
  declarations: [
    AppComponent
  ],
  imports: [
    BrowserModule
  ],
  providers: [],
  bootstrap: [AppComponent]
})
export class AppModule { }
"
`;

exports[`New workspace should add @angular/platform-browser-dynamic 1`] = `
Object {
  "dependencies": Object {
    "@angular/animations": "^8.2.12",
    "@angular/cdk": "^8.2.12",
    "@angular/common": "^8.2.12",
    "@angular/compiler": "^8.2.12",
    "@angular/core": "^8.2.12",
    "@dynatrace/barista-components": "^5.0.0",
    "@dynatrace/barista-fonts": ">= 1.0.0 < 2",
    "@dynatrace/barista-icons": ">= 3.0.0 < 4",
    "@types/highcharts": "^5.0.23",
    "d3-scale": "^3.0.0",
    "d3-shape": "^1.3.5",
    "highcharts": "^6.0.7",
  },
  "devDependencies": Object {
    "@angular-devkit/build-angular": "^0.803.15",
    "@angular-devkit/build-webpack": "^0.803.15",
    "@angular-devkit/schematics": "^8.3.15",
    "@angular/cli": "^8.3.15",
  },
}
`;

exports[`New workspace should add all the required modules in a fresh create angular app: angular.json 1`] = `
Object {
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "newProjectRoot": "apps",
  "projects": Object {
    "myapp": Object {
      "architect": Object {
        "build": Object {
          "builder": "@angular-devkit/build-angular:browser",
          "configurations": Object {
            "development": Object {
              "buildOptimizer": false,
              "extractLicenses": false,
              "namedChunks": true,
              "optimization": false,
              "sourceMap": true,
              "vendorChunk": true,
            },
            "production": Object {
              "budgets": Array [
                Object {
                  "maximumError": "1mb",
                  "maximumWarning": "500kb",
                  "type": "initial",
                },
                Object {
                  "maximumError": "4kb",
                  "maximumWarning": "2kb",
                  "type": "anyComponentStyle",
                },
              ],
              "outputHashing": "all",
            },
          },
          "defaultConfiguration": "production",
          "options": Object {
            "assets": Array [
              "apps/myapp/src/favicon.ico",
              "apps/myapp/src/assets",
              Object {
                "glob": "**/*",
                "input": "node_modules/@dynatrace/barista-fonts/fonts/",
                "output": "/fonts",
              },
              Object {
                "glob": "metadata.json",
                "input": "node_modules/@dynatrace/barista-icons",
                "output": "/assets/icons",
              },
              Object {
                "glob": "*.svg",
                "input": "node_modules/@dynatrace/barista-icons",
                "output": "/assets/icons",
              },
            ],
            "index": "apps/myapp/src/index.html",
            "inlineStyleLanguage": "scss",
            "main": "apps/myapp/src/main.ts",
            "outputPath": "dist/myapp",
            "polyfills": Array [
              "zone.js",
            ],
            "scripts": Array [],
            "styles": Array [
              "node_modules/@dynatrace/barista-fonts/typography.scss",
              "node_modules/@dynatrace/barista-components/style/index.scss",
              "apps/myapp/src/styles.scss",
            ],
            "tsConfig": "apps/myapp/tsconfig.app.json",
          },
        },
        "extract-i18n": Object {
          "builder": "@angular-devkit/build-angular:extract-i18n",
          "options": Object {
            "browserTarget": "myapp:build",
          },
        },
        "serve": Object {
          "builder": "@angular-devkit/build-angular:dev-server",
          "configurations": Object {
            "development": Object {
              "browserTarget": "myapp:build:development",
            },
            "production": Object {
              "browserTarget": "myapp:build:production",
            },
          },
          "defaultConfiguration": "development",
        },
        "test": Object {
          "builder": "@angular-devkit/build-angular:karma",
          "options": Object {
            "assets": Array [
              "apps/myapp/src/favicon.ico",
              "apps/myapp/src/assets",
            ],
            "inlineStyleLanguage": "scss",
            "polyfills": Array [
              "zone.js",
              "zone.js/testing",
            ],
            "scripts": Array [],
            "styles": Array [
              "apps/myapp/src/styles.scss",
            ],
            "tsConfig": "apps/myapp/tsconfig.spec.json",
          },
        },
      },
      "prefix": "app",
      "projectType": "application",
      "root": "apps/myapp",
      "schematics": Object {
        "@schematics/angular:class": Object {
          "skipTests": true,
        },
        "@schematics/angular:component": Object {
          "skipTests": true,
          "style": "scss",
        },
        "@schematics/angular:directive": Object {
          "skipTests": true,
        },
        "@schematics/angular:guard": Object {
          "skipTests": true,
        },
        "@schematics/angular:interceptor": Object {
          "skipTests": true,
        },
        "@schematics/angular:pipe": Object {
          "skipTests": true,
        },
        "@schematics/angular:resolver": Object {
          "skipTests": true,
        },
        "@schematics/angular:service": Object {
          "skipTests": true,
        },
      },
      "sourceRoot": "apps/myapp/src",
    },
  },
  "version": 1,
}
`;

exports[`New workspace should add all the required modules in a fresh create angular app: app.module.ts 1`] = `
"import { NgModule } from '@angular/core';
import { BrowserModule } from '@angular/platform-browser';
import { AppComponent } from './app.component';
import { HttpClientModule } from '@angular/common/http';
import { DtIconModule } from '@dynatrace/barista-components/icon';
import { BrowserAnimationsModule } from '@angular/platform-browser/animations';
@NgModule({
    declarations: [
        AppComponent
    ],
    imports: [
        BrowserModule,
        BrowserAnimationsModule,
        DtIconModule.forRoot({ svgIconLocation: '/assets/icons/{{name}}.svg' }),
        HttpClientModule
    ],
    providers: [],
    bootstrap: [AppComponent]
})
export class AppModule {
}
"
`;

exports[`New workspace should add all the required modules in a fresh create angular app: package.json 1`] = `
Object {
  "dependencies": Object {
    "@angular/animations": "^8.2.12",
    "@angular/cdk": "^8.2.12",
    "@angular/common": "^8.2.12",
    "@angular/compiler": "^16.2.0",
    "@angular/core": "^8.2.12",
    "@angular/forms": "^16.2.0",
    "@angular/platform-browser": "^16.2.0",
    "@angular/platform-browser-dynamic": "^16.2.0",
    "@angular/router": "^16.2.0",
    "@dynatrace/barista-components": "^5.0.0",
    "@dynatrace/barista-fonts": ">= 1.0.0 < 2",
    "@dynatrace/barista-icons": ">= 3.0.0 < 4",
    "@types/highcharts": "^5.0.23",
    "d3-scale": "^3.0.0",
    "d3-shape": "^1.3.5",
    "highcharts": "^6.0.7",
    "rxjs": "~7.8.0",
    "tslib": "^2.3.0",
    "zone.js": "~0.13.0",
  },
  "devDependencies": Object {
    "@angular-devkit/build-angular": "^16.2.0",
    "@angular/cli": "~8.0.0",
    "@angular/compiler-cli": "^16.2.0",
    "@types/jasmine": "~4.3.0",
    "jasmine-core": "~4.6.0",
    "karma": "~6.4.0",
    "karma-chrome-launcher": "~3.2.0",
    "karma-coverage": "~2.2.0",
    "karma-jasmine": "~5.1.0",
    "karma-jasmine-html-reporter": "~2.1.0",
    "typescript": "~5.1.3",
  },
  "name": "workspace",
  "private": true,
  "scripts": Object {
    "build": "ng build",
    "ng": "ng",
    "start": "ng serve",
    "test": "ng test",
    "watch": "ng build --watch --configuration development",
  },
  "version": "0.0.0",
}
`;

exports[`New workspace should add import the No operation animations module from angular when animations is set to false 1`] = `
"import { NgModule } from '@angular/core';
import { BrowserModule } from '@angular/platform-browser';
import { AppComponent } from './app.component';
import { HttpClientModule } from '@angular/common/http';
import { DtIconModule } from '@dynatrace/barista-components/icon';
import { NoopAnimationsModule } from '@angular/platform-browser/animations';
@NgModule({
    declarations: [
        AppComponent
    ],
    imports: [
        BrowserModule,
        NoopAnimationsModule,
        DtIconModule.forRoot({ svgIconLocation: '/assets/icons/{{name}}.svg' }),
        HttpClientModule
    ],
    providers: [],
    bootstrap: [AppComponent]
})
export class AppModule {
}
"
`;

exports[`New workspace should add the \`@angular/animations\` package with the same version as the \`@angular/core\` package when specified 1`] = `
Object {
  "dependencies": Object {
    "@angular/animations": "^8.2.12",
    "@angular/cdk": "^8.2.12",
    "@angular/common": "^8.2.12",
    "@angular/compiler": "^8.2.12",
    "@angular/core": "^8.2.12",
    "@dynatrace/barista-components": "^5.0.0",
    "@dynatrace/barista-fonts": ">= 1.0.0 < 2",
    "@dynatrace/barista-icons": ">= 3.0.0 < 4",
    "@types/highcharts": "^5.0.23",
    "d3-scale": "^3.0.0",
    "d3-shape": "^1.3.5",
    "highcharts": "^6.0.7",
  },
  "devDependencies": Object {
    "@angular-devkit/build-angular": "^0.803.15",
    "@angular-devkit/build-webpack": "^0.803.15",
    "@angular-devkit/schematics": "^8.3.15",
    "@angular/cli": "^8.3.15",
  },
}
`;

exports[`New workspace shouldn't add @angular/animations\` package if already installed 1`] = `
Object {
  "dependencies": Object {
    "@angular/animations": "^8.2.12",
    "@angular/cdk": "^8.2.12",
    "@angular/common": "^8.2.12",
    "@angular/core": "^8.2.12",
    "@dynatrace/barista-components": "^5.0.0",
    "@dynatrace/barista-fonts": ">= 1.0.0 < 2",
    "@dynatrace/barista-icons": ">= 3.0.0 < 4",
    "@types/highcharts": "^5.0.23",
    "d3-scale": "^3.0.0",
    "d3-shape": "^1.3.5",
    "highcharts": "^6.0.7",
  },
}
`;
